fix: 🐛 postcode suggestion flyout alignment

--- a/src/components/profile/scss/_profile.styles.scss
+++ b/src/components/profile/scss/_profile.styles.scss
@@ -434,6 +434,7 @@ $backBtnSize: 24px;
 		max-width: 320px;
 		margin: 0 auto;
 		padding-bottom: $grid-base-six;
+		text-align: left;
 		z-index: 20;
 
 		&:after,
